<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MLH</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_baidu_map">BaiduMapActivity</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_location_demo">LocationDemo</string>
    <string name="title_activity_location_demo2">LocationDemo2</string>
    <string name="title_activity_hello">HelloActivity</string>
    <string name="ColumnCreateTime">createtime</string>
    <string name="ColumnLatitude">latitude</string>
    <string name="ColumnLongitude">longitude</string>
    <string name="ColumnAltitude">altitude</string>
    <string name="ColumnAccuracy">accuracy</string>
    <string name="ColumnGuid">guid</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="StandardCharacter">正</string>
    <string name="title_activity_pictures_gps">PicturesGps</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="photo_name">相片名称</string>
    <string name="title_activity_system_camera">SystemCameraActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="PrePicture">上一张</string>
    <string name="NextPicture">下一张</string>
    <string name="RawPicture">查看原图</string>
    <string name="ColumnLocGuid">loc_guid</string>
    <string name="ColumnPicName">filename</string>
    <string name="ColumnProvince">province</string>
    <string name="ColumnAddress">address</string>
    <string name="ColumnCity">city</string>
    <string name="ColumnDistrict">district</string>
    <string name="ColumnStreet">street</string>
    <string name="ColumnStreetNum">streetnum</string>
    <string name="TestAddress">北京市朝阳区曙光里13号楼1单元904</string>

    <color name="White">#ffffff</color>
    <color name="Black">#000000</color>

    <string name="ContinueCapture">继续拍照</string>
    <string name="ColumnSpeed">speed</string>
    <string name="ColumnBearing">bearing</string>
    <string name="title_activity_list_pic">ListPicActivity</string>
    <string name="RefreshDownText">正在加载</string>
    <string name="RefreshUpText">加载更多</string>
    <string name="title_activity_pic_category">PicCategoryActivity</string>
    <string name="title_activity_pic_list">PicListActivity</string>
    <string name="title_activity_switch_pic">SwitchPicActivity</string>
    <string name="title_activity_pic_history">PicHistoryActivity</string>

    <color name="Blue">#0000ff</color>
    <color name="Red">#ff0000</color>
    <color name="Yellow">#ffff00</color>
    <color name="Green">#00ff00</color>

    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_site_list">SiteListActivity</string>
    <string name="title_activity_mt_home">MtHomeActivity</string>
    <string name="My">我的</string>
    <string name="Trajectory">轨迹</string>
    <string name="Capture">拍照</string>
    <string name="List">列表</string>

    <color name="HalfWhite">#50ffffff</color>
    <color name="Gray">#cccccc</color>

    <string name="Confirm">确定</string>

    <color name="SoftBlue">#4b84ec</color>
    <color name="HardGray">#999999</color>

    <string name="Picture">照片</string>

    <color name="DarkGreen">#24a900</color>

    <string name="title_activity_category">CategoryActivity</string>

    <color name="LightWhite">#ddd</color>

    <string name="Day">日期</string>
    <string name="Site">地点</string>

    <color name="MtBlue">#158684</color>

    <string name="title_activity_trace">TraceActivity</string>
    <string name="title_activity_album">AlbumActivity</string>

</resources>
