<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:background="@color/Black"
    >
    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/TestAddress"
        android:textColor="@color/White" />
    <TextView
        android:id="@+id/tvDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvAddress"
        android:layout_marginTop="30dp"
        android:text="@string/TestAddress"
        android:textColor="@color/White" />
    
    <ViewFlipper
        android:id="@+id/view_flipper"
        android:layout_width="fill_parent"
        android:layout_height="800px"
        android:flipInterval="1000"
        android:inAnimation="@anim/push_left_in"
        android:outAnimation="@anim/push_left_out"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:persistentDrawingCache="animation" >
    </ViewFlipper>
    
    <Button
        android:id="@+id/btnPrePic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/PrePicture" />

    <Button
        android:id="@+id/btnRawPic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/RawPicture" />

    <Button
        android:id="@+id/btnNextPic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/NextPicture" />
</RelativeLayout>